tests/ui/layout/malformed-unsized-type-in-union.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/malformed-unsized-type-in-union.rs:3:34
   |
LL | union W { s: dyn Iterator<Item = Missing> }
   |                                  ^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
